--- a/arch/powerpc/Makefile
+++ b/arch/powerpc/Makefile
@@ -1,3 +1,4 @@
+# SPDX-License-Identifier: GPL-2.0
 # This file is included by the global makefile so that you can add your own
 # architecture-specific flags and dependencies.
 #
