--- a/.github/workflows/powerpc-kernel+qemu.yml
+++ b/.github/workflows/powerpc-kernel+qemu.yml
@@ -82,7 +82,6 @@ jobs:
     env:
       ARCH: powerpc
       TARGET: kernel
-      CCACHE: 1
       SUBARCH: ${{ matrix.subarch }}
       IMAGE: ${{ matrix.image }}
       DEFCONFIG: ${{ matrix.defconfig }}
@@ -91,21 +90,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Register problem matchers
-      run: |
-        echo "::add-matcher::.github/problem-matchers/compiler-source.json"
-        echo "::add-matcher::.github/problem-matchers/compiler-non-source.json"
-
     - name: Load ccache
       uses: actions/cache@v2
       with:
         path: ~/.ccache
         key: ${{ matrix.image }}-${{ matrix.subarch }}-${{ matrix.defconfig }}
 
-    - name: Build
+    - name: build
       run: |
         mkdir -p ~/.ccache
-        ./arch/powerpc/tools/ci-build.sh
+        ls -l ~/.ccache
+        CCACHE=1 ./arch/powerpc/tools/ci-build.sh
 
     - name: Archive artifacts
       uses: actions/upload-artifact@v2
@@ -184,9 +179,6 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: ${{ matrix.defconfig }}-${{ matrix.new-image }}
-
-    - name: Disable network tests
-      run: echo "QEMU_NET_TESTS=0" >> $GITHUB_ENV
 
     - name: Run qemu-${{ matrix.machine }} with ${{ matrix.new-image }} build kernel
       run: ./scripts/boot/qemu-${{ matrix.machine }}
