GitHub Actions for snowpatch linuxppc-dev

--- a/.github/workflows/powerpc-kernel+qemu.yml
+++ b/.github/workflows/powerpc-kernel+qemu.yml
@@ -82,33 +82,28 @@ jobs:
     env:
       ARCH: powerpc
       TARGET: kernel
-      CCACHE: 1
       SUBARCH: ${{ matrix.subarch }}
       IMAGE: ${{ matrix.image }}
       DEFCONFIG: ${{ matrix.defconfig }}
       MERGE_CONFIG: ${{ matrix.merge_config }}
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Register problem matchers
-      run: |
-        echo "::add-matcher::.github/problem-matchers/compiler-source.json"
-        echo "::add-matcher::.github/problem-matchers/compiler-non-source.json"
+    - uses: actions/checkout@v2
 
     - name: Load ccache
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: ~/.ccache
         key: ${{ matrix.image }}-${{ matrix.subarch }}-${{ matrix.defconfig }}
 
-    - name: Build
+    - name: build
       run: |
         mkdir -p ~/.ccache
-        ./arch/powerpc/tools/ci-build.sh
+        ls -l ~/.ccache
+        CCACHE=1 ./arch/powerpc/tools/ci-build.sh
 
     - name: Archive artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
         name: ${{ matrix.defconfig }}-${{ matrix.image }}
         path: |
@@ -165,7 +160,7 @@ jobs:
             new-image: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
       with:
         repository: linuxppc/ci-scripts
 
@@ -181,12 +176,9 @@ jobs:
     - name: Install dependencies
       run: sudo apt install -y ${{ matrix.packages }} python3-pexpect python3-termcolor python3-yaml
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v2
       with:
         name: ${{ matrix.defconfig }}-${{ matrix.new-image }}
-
-    - name: Disable network tests
-      run: echo "QEMU_NET_TESTS=0" >> $GITHUB_ENV
 
     - name: Run qemu-${{ matrix.machine }} with ${{ matrix.new-image }} build kernel
       run: ./scripts/boot/qemu-${{ matrix.machine }}
@@ -195,7 +187,7 @@ jobs:
       run: ./scripts/boot/qemu-${{ matrix.machine_2 }}
       if: matrix.machine_2 != ''
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v2
       with:
         name: ${{ matrix.defconfig }}-${{ matrix.old-image }}
 
