--- a/.github/workflows/powerpc-clang.yml
+++ b/.github/workflows/powerpc-clang.yml
@@ -39,33 +39,28 @@ jobs:
       LLVM_IAS: 0
       ARCH: powerpc
       TARGET: kernel
-      CCACHE: 1
       SUBARCH: ${{ matrix.subarch }}
       IMAGE: ${{ matrix.image }}
       DEFCONFIG: ${{ matrix.defconfig }}
       MERGE_CONFIG: /linux/arch/powerpc/configs/disable-werror.config
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Register problem matchers
-      run: |
-        echo "::add-matcher::.github/problem-matchers/compiler-source.json"
-        echo "::add-matcher::.github/problem-matchers/compiler-non-source.json"
+    - uses: actions/checkout@v2
 
     - name: Load ccache
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: ~/.ccache
-        key: ${{ matrix.image }}-${{ matrix.subarch }}-${{ matrix.defconfig }}
+        key: clang-${{ matrix.image }}-${{ matrix.subarch }}-${{ matrix.defconfig }}
 
-    - name: Build
+    - name: build
       run: |
         mkdir -p ~/.ccache
-        ./arch/powerpc/tools/ci-build.sh
+        ls -l ~/.ccache
+        CCACHE=1 ./arch/powerpc/tools/ci-build.sh
 
     - name: Archive artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
         name: ${{ matrix.defconfig }}-${{ matrix.image }}
         path: |
